<resources>
    <string name="app_name">Shop Myself</string>
    <string name="action_settings">Settings</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="title_activity_scan_barcode">Scan Barcode</string>


    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="shop_logo">ShopMyself logo</string>
    <string name="shop_myself_name">Shop Myself</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="wish_list_item_image">Wish List Item Image</string>
    <string name="swipe_message">Swipe Down to add to cart. Swipe up to discard</string>
    <string name="addWishList">ADD TO WISHLIST</string>
    <string name="cart_image">Cart Image</string>
    <string name="scanner">Scan</string>
    <string name="history">History</string>
    <string name="wish_list">WishList</string>
    <string name="cart">Cart</string>
    <string name="scan_barode">Scan Barcode</string>
    <string name="move_to_cart">MOVE TO CART</string>
    <string name="confirmation">Confirm and Pay</string>
    <string name="checkout_title">Checkout</string>
    <string name="Total_Title">Total</string>
    <string name="Total_Number_Of"># of items:</string>
    <string name="receipt">Payment Successful. Your receipt</string>
    <string name="Total_Amount">$0.00</string>
    <string name="Code_Path_Mart">CodePath Mart</string>
    <string name="time">7:20</string>
    <string name="day">12/8/2016</string>
    <string name="wish_list_empty">WishList is empty. Try scanning some items.</string>
    <string name="cart_empty">Cart is empty. Try scanning some items.</string>

</resources>
