<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scan"
        android:enabled="true"
        android:icon="@drawable/barcode_scan"
        android:title="@string/scanner"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/cart_outline"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wish_list"
        android:enabled="true"
        android:icon="@drawable/heart_box"
        android:title="@string/wish_list"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />-->
</menu>