<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvStore"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/Code_Path_Mart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/tvDay"
        android:text="@string/day"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvStore"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/tvTime"
        android:text="@string/time"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvDay"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"/>

</RelativeLayout>