<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/name"
            android:src="@drawable/shopmyself_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:contentDescription="@string/shop_myself_name"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText android:id="@+id/emailField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" >

            </EditText>

            <EditText android:id="@+id/passwordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/hint_password"></EditText>

        </LinearLayout>

        <Button android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:text="@string/sign_up_button_label"
            android:theme="@style/ThemeOverlay.MyDarkButton"></Button>

    </RelativeLayout>

</LinearLayout>