<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ProductDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

<android.support.percent.PercentRelativeLayout
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_below="@+id/appBarLayout">

    <LinearLayout
        android:id="@+id/llItemHolder"
        android:layout_width="wrap_content"
        app:layout_heightPercent="60%"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:text="@string/swipe_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <in.arjsna.swipecardlib.SwipeCardView
            android:id="@+id/svItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:left_swipe_detect="false"
            app:right_swipe_detect="false"
            app:rotation_degrees="15.5" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlButtonHolder"
        android:layout_width="match_parent"
        app:layout_heightPercent="40%"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <View
            android:id="@+id/vwSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vwSeparator"
            android:layout_above="@+id/bnWishlist"
            android:src="@drawable/shopping_cart"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cart_image" />

        <Button
            android:id="@+id/bnWishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onClickAddWishlist"
            android:text="@string/addWishList" />

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>

</RelativeLayout>
